POST Swagger Implementation
